# mcp-servers

./: .gitignore  .mcp.json  CLAUDE.md  MCP-setup-guide.md  MCP-web-research.md  README.md
.claude/: settings.local.json
MCP-Builder-Stuff/: CLAUDE.md  Example Prompt.md  LICENSE
bacularis-mcp/: README.md  main.py  pyproject.toml
bconsole-mcp/: README.md  main.py  pyproject.toml
fastmcp/: .coverage.Dougs-MacBook-Pro-M1.local.53535.XXWtcBAx  pyproject.toml
fastmcp/docs/: changelog.mdx  docs.json  updates.mdx
fastmcp/docs/deployment/: http.mdx
fastmcp/docs/integrations/: huggingface.mdx
fastmcp/docs/more/: settings.mdx
fastmcp/docs/python-sdk/: fastmcp-utilities-types.mdx
fastmcp/docs/servers/auth/: oauth-proxy.mdx  oidc-proxy.mdx  remote-oauth.mdx
fastmcp/examples/auth/huggingface_oauth/: README.md  server.py
fastmcp/tests/: test_apps_prefab.py  test_settings.py
fastmcp/tests/client/: test_elicitation.py  test_streamable_http.py
fastmcp/tests/server/: test_transport.py
fastmcp/tests/server/auth/: test_oauth_consent_page.py  test_oauth_proxy_redirect_validation.py  test_redirect_validation.py  test_ssrf_protection.py
fastmcp/tests/server/http/: test_http_auth_middleware.py
mcp_youtube_dlp/: README.md  main.py
proxmox-mcp/: README.md
proxmox-mcp/config/: safety_policy.json
proxmox-mcp/docs/: api_manifest.md
proxmox-mcp/scripts/: test_connection.py
proxmox-mcp/src/proxmox_mcp/: config.py  models.py
proxmox-mcp/tests/: test_safety.py
unifi-mcp/: README.md  main.py
weather/: README.md  weather.py
zabbix-mcp/: README.md
(+11 files in other folders)
