[project]
name = "bacularis-mcp"
version = "0.1.0"
description = "MCP server for Bacularis backup management API (read-only)"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
