[project]
name = "bconsole-mcp"
version = "0.1.0"
description = "MCP server for real-time Bacula Director access via bconsole over SSH"
requires-python = ">=3.10"
dependencies = [
    "mcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
